# XLogger

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml  release.yml
scripts/: install-mac.command
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: file_watcher.rs  lib.rs  log_parser.rs  log_store.rs  prefs.rs
src-tauri/src/commands/: fs_commands.rs  mod.rs  prefs_commands.rs  watcher_commands.rs
src/app/: App.tsx
src/app/components/: LogInspector.tsx  LogTable.tsx  LoggerSidebar.tsx  LoggerToolbar.tsx  StatusBar.tsx  ThemeProvider.tsx
src/app/components/ui/: sonner.tsx
src/app/hooks/: useKeyboardShortcuts.ts  usePreferences.ts  useResizable.ts  useTauriLogs.ts
src/app/lib/: constants.ts  tauriApi.ts  types.ts
src/app/store/: logStore.ts
src/styles/: fonts.css  index.css
