[package]
name = "xlogger"
version = "0.1.0"
description = "XLogger - Multiplatform IDE-Style Logger Console"
authors = ["you"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "8"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
log = "0.4"
